<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Mycolor"  
    android:gravity="fill_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:text="@string/Text1"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:text="@string/Text3"
            android:layout_weight="1"/>
             
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>

        <EditText
            android:id="@+id/etNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:text="@string/Text2"  />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:text="@string/Text4" 
            android:layout_weight="1"
            />

    </LinearLayout>

<LinearLayout
    android:id="@+id/linearlayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:layout_marginTop="3pt"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

        <EditText
            android:id="@+id/etNum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>

        <EditText
            android:id="@+id/etNum4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>
           
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
       android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button" />

   </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginTop="3pt"
            android:layout_weight="1"
            android:text="@string/Text5" />

    </LinearLayout>
<LinearLayout
    android:id="@+id/linear7"
    android:layout_height="285px"
    android:layout_width="fill_parent"
    android:background="@color/White"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:textSize="245px"
       />
      </LinearLayout>

<LinearLayout
    android:id="@+id/Linearlayout8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_marginTop="3pt" >
       

</LinearLayout>

</LinearLayout>
