<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Mycolor"
    android:gravity="fill_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="0pt"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label1" 
            android:layout_marginRight="5pt"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:text="@string/label2" 
            android:layout_weight="1"/>
             
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="0pt"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
        </EditText>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="0pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/label3"  />


    </LinearLayout>

<LinearLayout
    android:id="@+id/linear4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="35pt"
    android:layout_marginRight="35pt"
    android:layout_marginTop="0pt"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" >

        </EditText>

        
          
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:layout_marginTop="3pt"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    >
    <TextView 
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label5"/>
</LinearLayout>
<LinearLayout 
    android:id="@+id/linear6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="35pt"
    android:layout_marginRight="35pt"
    android:layout_marginTop="3pt"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    >
    <EditText
            android:id="@+id/edit4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
            </EditText>
</LinearLayout>
    <LinearLayout
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
       android:gravity="center_horizontal"
        android:orientation="horizontal" 
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button" />

   </LinearLayout>

    <LinearLayout
        android:id="@+id/linear8"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="0pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginTop="3pt"
            android:layout_weight="1"
            android:text="@string/label4" />

    </LinearLayout>
<LinearLayout
    android:id="@+id/linear9"
    android:layout_height="190px"
    android:layout_width="fill_parent"
    android:background="@color/White">
    <TextView
        android:id="@+id/tvRez"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="0pt"
        android:gravity="center_horizontal"
        android:textSize="150px"
       />
      </LinearLayout>

</LinearLayout>
